2011-07-30  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/libgomp.c/atomic-14.c: New test.
	* testsuite/libgomp.c++/atomic-8.C: New test.
	* testsuite/libgomp.c++/atomic-9.C: New test.

2011-07-12  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/libgomp.fortran/allocatable8.f90: New test.

	* testsuite/libgomp.c/atomic-11.c: Add new tests.
	* testsuite/libgomp.c/atomic-12.c: Likewise.
	* testsuite/libgomp.c++/atomic-2.C: Likewise.
	* testsuite/libgomp.c++/atomic-3.C: Likewise.
	* testsuite/libgomp.c++/atomic-4.C: Likewise.
	* testsuite/libgomp.c++/atomic-5.C: Likewise.

2011-07-11  Jakub Jelinek  <jakub@redhat.com>

	* omp_lib.f90.in (openmp_version): Change to 201107.
	* omp_lib.h.in (openmp_version): Likewise.

2011-05-05  Jakub Jelinek  <jakub@redhat.com>

	* task.c (omp_in_final): Don't return true if not final_task.

	* testsuite/libgomp.c/task-5.c: Adjust.
	* testsuite/libgomp.c++/task-8.C: Likewise.
	* testsuite/libgomp/fortran/task4.f90: Likewise.

2011-04-28  Jakub Jelinek  <jakub@redhat.com>

	* libgomp_g.h (GOMP_taskyield): New prototype.
	* libgomp.map (GOMP_taskyield): Export with GOMP_3.0 symver.
	* libgomp.h (struct gomp_task): Add final_task field.
	* task.c (gomp_init_task): Initialize final_task.
	(GOMP_task): Remove unused attribute from flags.  Handle final
	tasks.
	(GOMP_taskyield): New function.
	(omp_in_final): Return true if if (false) or final (true) task
	or descendant of final (true).
	* testsuite/libgomp.c/task-5.c: New test.
	* testsuite/libgomp.c++/task-8.C: New test.
	* testsuite/libgomp.fortran/task4.f90: New test.

2011-04-27  Tobias Burnus  <burnus@net-b.de>

	* libgomp.texi: Update OpenMP spec references to 3.1.
	(omp_in_final,OMP_PROC_BIND): New sections.
	(OMP_NUM_THREADS): Document that the value can be now a list.
	(GOMP_STACKSIZE,GOMP_CPU_AFFINITY): Update @ref.

2011-04-27  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/libgomp.c/atomic-13.c: New test.
	* testsuite/libgomp.c++/atomic-6.C: New test.